# cli

./: Cargo.toml  README.md
.github/workflows/: primary.yml
src/: main.rs
src/commands/: event.rs  help.rs  mod.rs
